--- a/public/patterns/00-atoms-typography-paragraph-footer/00-atoms-typography-paragraph-footer.rendered.html
+++ b/public/patterns/00-atoms-typography-paragraph-footer/00-atoms-typography-paragraph-footer.rendered.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1496202744674" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1496202744674" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1496593235245" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1496593235245" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -17,8 +17,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1496202744674" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1496202744674" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1496593235245" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1496593235245" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -26,15 +26,7 @@
 
 <body class="">
 
-  <div class="comp01-top">
-    <div class="comp01-left"></div>
-    <div class="comp01-right"></div>
-  </div>
-
-  <div class="comp01-bottom">
-    <div class="comp01-left"></div>
-    <div class="comp01-right"></div>
-  </div>
+  <p>Integer eget mollis ipsum. Donec vehicula eleifend viverra. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam tincidunt odio et augue porta ultrices. Mauris pulvinar tellus pulvinar viverra dapibus. Cras ut tortor enim.</p>
 
   <!--DO NOT REMOVE-->
   <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
@@ -45,22 +37,22 @@
       "lineage": [],
       "patternLineageRExists": true,
       "patternLineagesR": [{
-        "lineagePattern": "templates-homepage",
-        "lineagePath": "../../patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.rendered.html"
+        "lineagePattern": "organisms-footer",
+        "lineagePath": "../../patterns/02-organisms-footer-footer/02-organisms-footer-footer.rendered.html"
       }],
       "lineageR": [{
-        "lineagePattern": "templates-homepage",
-        "lineagePath": "../../patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.rendered.html"
+        "lineagePattern": "organisms-footer",
+        "lineagePath": "../../patterns/02-organisms-footer-footer/02-organisms-footer-footer.rendered.html"
       }],
       "patternLineageEExists": true,
       "patternDesc": "<p>Description</p>\n",
       "patternBreadcrumb": {
-        "patternType": "organisms",
-        "patternSubtype": "comps"
+        "patternType": "atoms",
+        "patternSubtype": "typography"
       },
       "patternExtension": "mustache",
-      "patternName": "Comp01",
-      "patternPartial": "organisms-comp01",
+      "patternName": "Paragraph Footer",
+      "patternPartial": "atoms-paragraph-footer",
       "patternState": "",
       "patternEngineName": "mustache",
       "extraOutput": {}
@@ -100,10 +92,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1496202744674">
+  <script id="pl-js-polyfill-insert-1496593235245">
     (function() {
       if (self != top) {
-        var cb = '1496202744674';
+        var cb = '1496593235245';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -113,10 +105,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1496202744674">
+  <script id="pl-js-insert-1496593235245">
     (function() {
       if (self != top) {
-        var cb = '1496202744674';
+        var cb = '1496593235245';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
