--- a/public/patterns/01-molecules-work-preview-work-preview/01-molecules-work-preview-work-preview.rendered.html
+++ b/public/patterns/01-molecules-work-preview-work-preview/01-molecules-work-preview-work-preview.rendered.html
@@ -26,7 +26,9 @@
 
 <body class="">
 
-  <div class="footer-link"><a href="#">Footer Link</a></div>
+  <div class="work-preview">
+    Work Preview
+  </div>
 
   <!--DO NOT REMOVE-->
   <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
@@ -35,24 +37,18 @@
       "patternLineageExists": false,
       "patternLineages": [],
       "lineage": [],
-      "patternLineageRExists": true,
-      "patternLineagesR": [{
-        "lineagePattern": "organisms-footer",
-        "lineagePath": "../../patterns/02-organisms-footer-footer/02-organisms-footer-footer.rendered.html"
-      }],
-      "lineageR": [{
-        "lineagePattern": "organisms-footer",
-        "lineagePath": "../../patterns/02-organisms-footer-footer/02-organisms-footer-footer.rendered.html"
-      }],
-      "patternLineageEExists": true,
-      "patternDesc": "<p>A text link in the footer</p>\n",
+      "patternLineageRExists": false,
+      "patternLineagesR": [],
+      "lineageR": [],
+      "patternLineageEExists": false,
+      "patternDesc": "<p>Description</p>\n",
       "patternBreadcrumb": {
-        "patternType": "atoms",
-        "patternSubtype": "links"
+        "patternType": "molecules",
+        "patternSubtype": "work-preview"
       },
       "patternExtension": "mustache",
-      "patternName": "Footer Nav Link",
-      "patternPartial": "atoms-footer-nav-link",
+      "patternName": "Work Preview",
+      "patternPartial": "molecules-work-preview",
       "patternState": "",
       "patternEngineName": "mustache",
       "extraOutput": {}
