--- a/public/patterns/02-organisms-footer-footer/02-organisms-footer-footer.markup-only.html
+++ b/public/patterns/02-organisms-footer-footer/02-organisms-footer-footer.markup-only.html
@@ -1,29 +1,42 @@
 <div class="footer">
   <div class="footer-inside">
-    <div class="footer-third">
+    <div class="footer-logo">
       <div class="logo"><img src="../../images/logolight.svg"></div>
 
-      <div class="footer-link"><a href="#">Footer Link</a></div>
-
-      <div class="footer-link"><a href="#">Footer Link</a></div>
-
     </div>
-    <div class="footer-third">
-      <div class="small-caps">Integer eget mollis</div>
+    <div class="footer-thirds">
+      <div class="footer-third first">
+        <div class="footer-link"><a href="#">Footer Link</a></div>
 
-      <p>Integer eget mollis ipsum. Donec vehicula eleifend viverra. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam tincidunt odio et augue porta ultrices. Mauris pulvinar tellus pulvinar viverra dapibus. Cras ut tortor enim. Mauris
-        tincidunt dui ac massa tincidunt ultrices. Nam viverra bibendum finibus. Donec gravida enim sem. Suspendisse sodales posuere sapien eget aliquam. Fusce mollis viverra felis, in blandit orci tristique sit amet. Pellentesque ullamcorper malesuada
-        augue, id commodo velit commodo at. Aenean efficitur sem non dolor varius, eget dictum felis consectetur. Ut a condimentum justo. Nullam congue, enim eu pellentesque faucibus, ante purus mattis elit, non viverra turpis mi eu tellus. Phasellus
-        vitae convallis nibh.</p>
+        <div class="footer-link"><a href="#">Footer Link</a></div>
 
+      </div>
+      <div class="footer-third second">
+        <div class="small-caps">Integer eget mollis</div>
+
+        <p>Integer eget mollis ipsum. Donec vehicula eleifend viverra. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam tincidunt odio et augue porta ultrices. Mauris pulvinar tellus pulvinar viverra dapibus. Cras ut tortor enim.</p>
+
+      </div>
+      <div class="footer-third third">
+        <div class="columns">
+          <div class="column-first">
+            <div class="footer-link"><a href="#">Footer Link</a></div>
+
+            <div class="footer-link"><a href="#">Footer Link</a></div>
+
+            <div class="footer-link"><a href="#">Footer Link</a></div>
+
+          </div>
+          <div class="column-second">
+            <div class="footer-link"><a href="#">Footer Link</a></div>
+
+            <div class="footer-link"><a href="#">Footer Link</a></div>
+
+            <div class="footer-link"><a href="#">Footer Link</a></div>
+
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="footer-third">
-    </div>
-    <div class="footer-link"><a href="#">Footer Link</a></div>
-
-    <div class="footer-link"><a href="#">Footer Link</a></div>
-
-    <div class="footer-link"><a href="#">Footer Link</a></div>
-
   </div>
 </div>
