--- a/public/patterns/01-molecules-overlap-patterns-overlap-1/01-molecules-overlap-patterns-overlap-1.rendered.html
+++ b/public/patterns/01-molecules-overlap-patterns-overlap-1/01-molecules-overlap-patterns-overlap-1.rendered.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1496202744674" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1496202744674" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1496593235245" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1496593235245" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -17,8 +17,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1496202744674" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1496202744674" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1496593235245" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1496593235245" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -26,9 +26,14 @@
 
 <body class="">
 
-  <div class="card">
-    <div class="card-top"></div>
-    <div class="card-bottom"></div>
+  <div class="overlap1-top">
+    <div class="overlap1-left"></div>
+    <div class="overlap1-right"></div>
+  </div>
+
+  <div class="overlap1-bottom">
+    <div class="overlap1-left"></div>
+    <div class="overlap1-right"></div>
   </div>
 
   <!--DO NOT REMOVE-->
@@ -45,11 +50,11 @@
       "patternDesc": "<p>Description</p>\n",
       "patternBreadcrumb": {
         "patternType": "molecules",
-        "patternSubtype": "card"
+        "patternSubtype": "overlap-patterns"
       },
       "patternExtension": "mustache",
-      "patternName": "Card",
-      "patternPartial": "molecules-card",
+      "patternName": "Overlap 1",
+      "patternPartial": "molecules-overlap-1",
       "patternState": "",
       "patternEngineName": "mustache",
       "extraOutput": {}
@@ -89,10 +94,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1496202744674">
+  <script id="pl-js-polyfill-insert-1496593235245">
     (function() {
       if (self != top) {
-        var cb = '1496202744674';
+        var cb = '1496593235245';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -102,10 +107,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1496202744674">
+  <script id="pl-js-insert-1496593235245">
     (function() {
       if (self != top) {
-        var cb = '1496202744674';
+        var cb = '1496593235245';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
