Copy block and organize headlines

--- a/public/patterns/02-organisms-copy-block/index.html
+++ b/public/patterns/02-organisms-copy-block/index.html
@@ -29,35 +29,38 @@
   
   <!-- Patterns -->
   <div id="sg-patterns">
-<div id="viewall-molecules-work-preview" class="sg-pattern-category">
-  <h2 class="sg-pattern-category-title"><a href="../../patterns/01-molecules-work-preview&#x2F;index.html" class="patternLink" data-patternpartial="viewall-molecules-work-preview">work-preview</a></h2>
+<div id="viewall-organisms-copy-block" class="sg-pattern-category">
+  <h2 class="sg-pattern-category-title"><a href="../../patterns/02-organisms-copy-block&#x2F;index.html" class="patternLink" data-patternpartial="viewall-organisms-copy-block">copy-block</a></h2>
 
   <div class="sg-pattern-category-body">
     
   </div><!--end sg-pattern-category-body-->
   
 </div><!--end sg-pattern-category-->
-<div id="molecules-work-preview" class="sg-pattern">
+<div id="organisms-copy-block" class="sg-pattern">
   <div class="sg-pattern-head">
     <h3 class="sg-pattern-title">
-      <a href="../../patterns/01-molecules-work-preview-work-preview&#x2F;01-molecules-work-preview-work-preview.rendered.html" class="patternLink" data-patternpartial="molecules-work-preview" title="Link to Pattern">
-          Work Preview
+      <a href="../../patterns/02-organisms-copy-block-copy-block&#x2F;02-organisms-copy-block-copy-block.rendered.html" class="patternLink" data-patternpartial="organisms-copy-block" title="Link to Pattern">
+          Copy Block
       </a>
     </h3>
     <div class="sg-pattern-breadcrumb"></div>
-    <a href="#" data-patternpartial="molecules-work-preview" title="View Pattern Info" id="sg-pattern-extra-toggle-molecules-work-preview" class="sg-pattern-extra-toggle"><span>&#9660;</span></a>
+    <a href="#" data-patternpartial="organisms-copy-block" title="View Pattern Info" id="sg-pattern-extra-toggle-organisms-copy-block" class="sg-pattern-extra-toggle"><span>&#9660;</span></a>
   </div>
-  <div class="sg-pattern-extra" id="sg-pattern-extra-molecules-work-preview">
+  <div class="sg-pattern-extra" id="sg-pattern-extra-organisms-copy-block">
     
   </div>
   <div class="sg-pattern-example">
-    <div class="work-preview">
-Work Preview
+    <div class="copy-block">
+    <h1>The Accidental Getaway Driver</h1>
+
+    <p>Integer eget mollis ipsum. Donec vehicula eleifend viverra. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam tincidunt odio et augue porta ultrices. Mauris pulvinar tellus pulvinar viverra dapibus. Cras ut tortor enim. Mauris tincidunt dui ac massa tincidunt ultrices. Nam viverra bibendum finibus. Donec gravida enim sem. Suspendisse sodales posuere sapien eget aliquam.</p>
+
 </div>
 
   </div>
-  <script type="text/json" id="sg-pattern-data-molecules-work-preview" class="sg-pattern-data">
-    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":false,"patternLineagesR":[],"lineageR":[],"patternLineageEExists":false,"patternDesc":"<p>Description</p>\n","patternBreadcrumb":{"patternType":"molecules","patternSubtype":"work-preview"},"patternExtension":"mustache","patternName":"Work Preview","patternPartial":"molecules-work-preview","patternState":"","patternEngineName":"mustache","extraOutput":{}}
+  <script type="text/json" id="sg-pattern-data-organisms-copy-block" class="sg-pattern-data">
+    {"cssEnabled":false,"patternLineageExists":true,"patternLineages":[{"lineagePattern":"atoms-h1","lineagePath":"../../patterns/00-atoms-typography-h1/00-atoms-typography-h1.rendered.html"},{"lineagePattern":"atoms-paragraph","lineagePath":"../../patterns/00-atoms-typography-paragraph/00-atoms-typography-paragraph.rendered.html"}],"lineage":[{"lineagePattern":"atoms-h1","lineagePath":"../../patterns/00-atoms-typography-h1/00-atoms-typography-h1.rendered.html"},{"lineagePattern":"atoms-paragraph","lineagePath":"../../patterns/00-atoms-typography-paragraph/00-atoms-typography-paragraph.rendered.html"}],"patternLineageRExists":false,"patternLineagesR":[],"lineageR":[],"patternLineageEExists":true,"patternDesc":"<p>Description</p>\n","patternBreadcrumb":{"patternType":"organisms","patternSubtype":"copy-block"},"patternExtension":"mustache","patternName":"Copy Block","patternPartial":"organisms-copy-block","patternState":"","patternEngineName":"mustache","extraOutput":{}}
   </script>
 </div><!--end .sg-pattern-->
   </div> <!--end #sg-patterns-->
@@ -66,7 +69,7 @@ Work Preview
   
   <!--DO NOT REMOVE-->
   <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
-  {"patternPartial":"viewall-molecules-all"}
+  {"patternPartial":"viewall-organisms-copy-block"}
 </script>
 
 <script>
