--- a/public/patterns/00-atoms-typography-h1-large/00-atoms-typography-h1-large.rendered.html
+++ b/public/patterns/00-atoms-typography-h1-large/00-atoms-typography-h1-large.rendered.html
@@ -26,60 +26,33 @@
 
 <body class="">
 
-  <div class="primary-nav">
-    <div class="primary-nav-inside">
-      <div class="primary-nav-third">
-        <a href="#" class="primary-nav-link">Primary Nav Link</a>
-
-      </div>
-      <div class="primary-nav-third">
-        <div class="logo"><img src="../../images/logolight.svg"></div>
-
-      </div>
-      <div class="primary-nav-third">
-        <a href="#" class="primary-nav-link">Primary Nav Link</a>
-
-      </div>
-    </div>
-  </div>
+  <h1 class="large">Headline Primary</h1>
 
   <!--DO NOT REMOVE-->
   <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
     {
       "cssEnabled": false,
-      "patternLineageExists": true,
-      "patternLineages": [{
-        "lineagePattern": "atoms-primary-nav-link",
-        "lineagePath": "../../patterns/00-atoms-links-primary-nav-link/00-atoms-links-primary-nav-link.rendered.html"
-      }, {
-        "lineagePattern": "atoms-logo",
-        "lineagePath": "../../patterns/00-atoms-logo-logo/00-atoms-logo-logo.rendered.html"
-      }],
-      "lineage": [{
-        "lineagePattern": "atoms-primary-nav-link",
-        "lineagePath": "../../patterns/00-atoms-links-primary-nav-link/00-atoms-links-primary-nav-link.rendered.html"
-      }, {
-        "lineagePattern": "atoms-logo",
-        "lineagePath": "../../patterns/00-atoms-logo-logo/00-atoms-logo-logo.rendered.html"
-      }],
+      "patternLineageExists": false,
+      "patternLineages": [],
+      "lineage": [],
       "patternLineageRExists": true,
       "patternLineagesR": [{
-        "lineagePattern": "templates-homepage",
-        "lineagePath": "../../patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.rendered.html"
+        "lineagePattern": "organisms-header",
+        "lineagePath": "../../patterns/02-organisms-header-header/02-organisms-header-header.rendered.html"
       }],
       "lineageR": [{
-        "lineagePattern": "templates-homepage",
-        "lineagePath": "../../patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.rendered.html"
+        "lineagePattern": "organisms-header",
+        "lineagePath": "../../patterns/02-organisms-header-header/02-organisms-header-header.rendered.html"
       }],
       "patternLineageEExists": true,
       "patternDesc": "<p>Description</p>\n",
       "patternBreadcrumb": {
-        "patternType": "organisms",
-        "patternSubtype": "primary-nav"
+        "patternType": "atoms",
+        "patternSubtype": "typography"
       },
       "patternExtension": "mustache",
-      "patternName": "Primary Nav",
-      "patternPartial": "organisms-primary-nav",
+      "patternName": "H1 Large",
+      "patternPartial": "atoms-h1-large",
       "patternState": "",
       "patternEngineName": "mustache",
       "extraOutput": {}
