--- a/public/patterns/00-atoms-typography-paragraph/00-atoms-typography-paragraph.rendered.html
+++ b/public/patterns/00-atoms-typography-paragraph/00-atoms-typography-paragraph.rendered.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1496593235245" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1496593235245" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1499539998762" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1499539998762" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -17,8 +17,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1496593235245" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1496593235245" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1499539998762" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1499539998762" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -27,8 +27,7 @@
 <body class="">
 
   <p>Integer eget mollis ipsum. Donec vehicula eleifend viverra. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam tincidunt odio et augue porta ultrices. Mauris pulvinar tellus pulvinar viverra dapibus. Cras ut tortor enim. Mauris tincidunt
-    dui ac massa tincidunt ultrices. Nam viverra bibendum finibus. Donec gravida enim sem. Suspendisse sodales posuere sapien eget aliquam. Fusce mollis viverra felis, in blandit orci tristique sit amet. Pellentesque ullamcorper malesuada augue, id commodo
-    velit commodo at. Aenean efficitur sem non dolor varius, eget dictum felis consectetur. Ut a condimentum justo. Nullam congue, enim eu pellentesque faucibus, ante purus mattis elit, non viverra turpis mi eu tellus. Phasellus vitae convallis nibh.</p>
+    dui ac massa tincidunt ultrices. Nam viverra bibendum finibus. Donec gravida enim sem. Suspendisse sodales posuere sapien eget aliquam.</p>
 
   <!--DO NOT REMOVE-->
   <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
@@ -37,10 +36,16 @@
       "patternLineageExists": false,
       "patternLineages": [],
       "lineage": [],
-      "patternLineageRExists": false,
-      "patternLineagesR": [],
-      "lineageR": [],
-      "patternLineageEExists": false,
+      "patternLineageRExists": true,
+      "patternLineagesR": [{
+        "lineagePattern": "organisms-copy-block",
+        "lineagePath": "../../patterns/02-organisms-copy-block-copy-block/02-organisms-copy-block-copy-block.rendered.html"
+      }],
+      "lineageR": [{
+        "lineagePattern": "organisms-copy-block",
+        "lineagePath": "../../patterns/02-organisms-copy-block-copy-block/02-organisms-copy-block-copy-block.rendered.html"
+      }],
+      "patternLineageEExists": true,
       "patternDesc": "<p>Description</p>\n",
       "patternBreadcrumb": {
         "patternType": "atoms",
@@ -88,10 +93,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1496593235245">
+  <script id="pl-js-polyfill-insert-1499539998762">
     (function() {
       if (self != top) {
-        var cb = '1496593235245';
+        var cb = '1499539998762';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -101,10 +106,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1496593235245">
+  <script id="pl-js-insert-1499539998762">
     (function() {
       if (self != top) {
-        var cb = '1496593235245';
+        var cb = '1499539998762';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
