--- a/public/patterns/02-organisms-copy-block-copy-block/02-organisms-copy-block-copy-block.rendered.html
+++ b/public/patterns/02-organisms-copy-block-copy-block/02-organisms-copy-block-copy-block.rendered.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1496593235245" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1496593235245" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1499539998762" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1499539998762" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -17,8 +17,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1496593235245" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1496593235245" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1499539998762" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1499539998762" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -26,33 +26,45 @@
 
 <body class="">
 
-  <h1>The Accidental Getaway Driver</h1>
+  <div class="copy-block">
+    <h1>The Accidental Getaway Driver</h1>
+
+    <p>Integer eget mollis ipsum. Donec vehicula eleifend viverra. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam tincidunt odio et augue porta ultrices. Mauris pulvinar tellus pulvinar viverra dapibus. Cras ut tortor enim. Mauris
+      tincidunt dui ac massa tincidunt ultrices. Nam viverra bibendum finibus. Donec gravida enim sem. Suspendisse sodales posuere sapien eget aliquam.</p>
+
+  </div>
 
   <!--DO NOT REMOVE-->
   <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
     {
       "cssEnabled": false,
-      "patternLineageExists": false,
-      "patternLineages": [],
-      "lineage": [],
-      "patternLineageRExists": true,
-      "patternLineagesR": [{
-        "lineagePattern": "organisms-header",
-        "lineagePath": "../../patterns/02-organisms-header-header/02-organisms-header-header.rendered.html"
+      "patternLineageExists": true,
+      "patternLineages": [{
+        "lineagePattern": "atoms-h1",
+        "lineagePath": "../../patterns/00-atoms-typography-h1/00-atoms-typography-h1.rendered.html"
+      }, {
+        "lineagePattern": "atoms-paragraph",
+        "lineagePath": "../../patterns/00-atoms-typography-paragraph/00-atoms-typography-paragraph.rendered.html"
       }],
-      "lineageR": [{
-        "lineagePattern": "organisms-header",
-        "lineagePath": "../../patterns/02-organisms-header-header/02-organisms-header-header.rendered.html"
+      "lineage": [{
+        "lineagePattern": "atoms-h1",
+        "lineagePath": "../../patterns/00-atoms-typography-h1/00-atoms-typography-h1.rendered.html"
+      }, {
+        "lineagePattern": "atoms-paragraph",
+        "lineagePath": "../../patterns/00-atoms-typography-paragraph/00-atoms-typography-paragraph.rendered.html"
       }],
+      "patternLineageRExists": false,
+      "patternLineagesR": [],
+      "lineageR": [],
       "patternLineageEExists": true,
       "patternDesc": "<p>Description</p>\n",
       "patternBreadcrumb": {
-        "patternType": "atoms",
-        "patternSubtype": "typography"
+        "patternType": "organisms",
+        "patternSubtype": "copy-block"
       },
       "patternExtension": "mustache",
-      "patternName": "Headline",
-      "patternPartial": "atoms-headline",
+      "patternName": "Copy Block",
+      "patternPartial": "organisms-copy-block",
       "patternState": "",
       "patternEngineName": "mustache",
       "extraOutput": {}
@@ -92,10 +104,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1496593235245">
+  <script id="pl-js-polyfill-insert-1499539998762">
     (function() {
       if (self != top) {
-        var cb = '1496593235245';
+        var cb = '1499539998762';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -105,10 +117,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1496593235245">
+  <script id="pl-js-insert-1499539998762">
     (function() {
       if (self != top) {
-        var cb = '1496593235245';
+        var cb = '1499539998762';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
