--- a/public/patterns/02-organisms-header-header/02-organisms-header-header.rendered.html
+++ b/public/patterns/02-organisms-header-header/02-organisms-header-header.rendered.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1496593235245" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1496593235245" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1499539998762" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1499539998762" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -17,8 +17,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1496593235245" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1496593235245" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1499539998762" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1499539998762" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -27,7 +27,7 @@
 <body class="">
 
   <div class="header">
-    <h1>The Accidental Getaway Driver</h1>
+    <h1 class="large">Headline Primary</h1>
 
   </div>
 
@@ -37,12 +37,12 @@
       "cssEnabled": false,
       "patternLineageExists": true,
       "patternLineages": [{
-        "lineagePattern": "atoms-headline",
-        "lineagePath": "../../patterns/00-atoms-typography-headline/00-atoms-typography-headline.rendered.html"
+        "lineagePattern": "atoms-h1-large",
+        "lineagePath": "../../patterns/00-atoms-typography-h1-large/00-atoms-typography-h1-large.rendered.html"
       }],
       "lineage": [{
-        "lineagePattern": "atoms-headline",
-        "lineagePath": "../../patterns/00-atoms-typography-headline/00-atoms-typography-headline.rendered.html"
+        "lineagePattern": "atoms-h1-large",
+        "lineagePath": "../../patterns/00-atoms-typography-h1-large/00-atoms-typography-h1-large.rendered.html"
       }],
       "patternLineageRExists": true,
       "patternLineagesR": [{
@@ -101,10 +101,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1496593235245">
+  <script id="pl-js-polyfill-insert-1499539998762">
     (function() {
       if (self != top) {
-        var cb = '1496593235245';
+        var cb = '1499539998762';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -114,10 +114,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1496593235245">
+  <script id="pl-js-insert-1499539998762">
     (function() {
       if (self != top) {
-        var cb = '1496593235245';
+        var cb = '1499539998762';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
