--- a/public/patterns/04-pages-homepage-homepage/04-pages-homepage-homepage.markup-only.html
+++ b/public/patterns/04-pages-homepage-homepage/04-pages-homepage-homepage.markup-only.html
@@ -17,7 +17,7 @@
   </div>
 
   <div class="header">
-    <h1>The Accidental Getaway Driver</h1>
+    <h1 class="large">Headline Primary</h1>
 
   </div>
 
