Updated darker colors

--- a/public/patterns/00-atoms-colors-1-brand-colors/00-atoms-colors-1-brand-colors.markup-only.html
+++ b/public/patterns/00-atoms-colors-1-brand-colors/00-atoms-colors-1-brand-colors.markup-only.html
@@ -1,9 +1,9 @@
 <ul class="sg-colors">
   <li>
-    <span class="sg-swatch" style="background:#262d3f"></span>
+    <span class="sg-swatch" style="background:#181818"></span>
     <span class="sg-label">
 		$color-dark <br />
-		#262d3f
+		#181818
 	</span>
   </li>
   <li>
