Revised top nav

--- a/public/patterns/02-organisms-primary-nav-primary-nav/02-organisms-primary-nav-primary-nav.markup-only.html
+++ b/public/patterns/02-organisms-primary-nav-primary-nav/02-organisms-primary-nav-primary-nav.markup-only.html
@@ -1,14 +1,14 @@
 <div class="primary-nav">
   <div class="primary-nav-inside">
-    <div class="primary-nav-third">
+    <div class="primary-nav-third first">
       <a href="#" class="primary-nav-link">Nav Link</a>
 
     </div>
-    <div class="primary-nav-third">
+    <div class="primary-nav-third second">
       <div class="logo"><img src="../../images/logo.svg"></div>
 
     </div>
-    <div class="primary-nav-third">
+    <div class="primary-nav-third third">
       <a href="#" class="primary-nav-link">Nav Link</a>
 
     </div>
