Removed buttons and revised header

--- a/public/patterns/01-molecules-copy-block-copy-block/01-molecules-copy-block-copy-block.markup-only.html
+++ b/public/patterns/01-molecules-copy-block-copy-block/01-molecules-copy-block-copy-block.markup-only.html
@@ -1,5 +1,5 @@
 <div class="copy-block">
-  <h1>The Accidental Getaway Driver</h1>
+  <h1>UX without design is boring. Design without UX is chaos.</h1>
 
   <p>Integer eget mollis ipsum. Donec vehicula eleifend viverra. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam tincidunt odio et augue porta ultrices. Mauris pulvinar tellus pulvinar viverra dapibus. Cras ut tortor enim. Mauris tincidunt
     dui ac massa tincidunt ultrices. Nam viverra bibendum finibus. Donec gravida enim sem. Suspendisse sodales posuere sapien eget aliquam.</p>
