--- a/public/patterns/01-molecules-copy-block/index.html
+++ b/public/patterns/01-molecules-copy-block/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
     
-    <link rel="stylesheet" href="../../css/style.css?1502154122348" media="all" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1502154122348" media="all" />
+    <link rel="stylesheet" href="../../css/style.css?1504057147273" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1504057147273" media="all" />
     
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -16,8 +16,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1502154122348" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1502154122348" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1504057147273" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1504057147273" media="all" />
 
     <!-- End Pattern Lab -->
   
@@ -52,7 +52,7 @@
   </div>
   <div class="sg-pattern-example">
     <div class="copy-block">
-    <h1>The Accidental Getaway Driver</h1>
+    <h1>UX without design is boring. Design without UX is chaos.</h1>
 
     <p>Integer eget mollis ipsum. Donec vehicula eleifend viverra. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam tincidunt odio et augue porta ultrices. Mauris pulvinar tellus pulvinar viverra dapibus. Cras ut tortor enim. Mauris tincidunt dui ac massa tincidunt ultrices. Nam viverra bibendum finibus. Donec gravida enim sem. Suspendisse sodales posuere sapien eget aliquam.</p>
 
@@ -105,10 +105,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1502154122348">
+<script id="pl-js-polyfill-insert-1504057147273">
   (function() {
     if (self != top) {
-      var cb = '1502154122348';
+      var cb = '1504057147273';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -118,10 +118,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1502154122348">
+<script id="pl-js-insert-1504057147273">
   (function() {
     if (self != top) {
-      var cb = '1502154122348';
+      var cb = '1504057147273';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
