--- a/public/patterns/00-atoms-links/index.html
+++ b/public/patterns/00-atoms-links/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
     
-    <link rel="stylesheet" href="../../css/style.css?1504541839604" media="all" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1504541839604" media="all" />
+    <link rel="stylesheet" href="../../css/style.css?1504551150857" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1504551150857" media="all" />
     
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -16,8 +16,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1504541839604" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1504541839604" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1504551150857" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1504551150857" media="all" />
 
     <!-- End Pattern Lab -->
   
@@ -76,7 +76,7 @@
 
   </div>
   <script type="text/json" id="sg-pattern-data-atoms-footer-nav-link" class="sg-pattern-data">
-    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"molecules-footer","lineagePath":"../../patterns/01-molecules-footer-footer/01-molecules-footer-footer.rendered.html"}],"lineageR":[{"lineagePattern":"molecules-footer","lineagePath":"../../patterns/01-molecules-footer-footer/01-molecules-footer-footer.rendered.html"}],"patternLineageEExists":true,"patternDesc":"<p>A text link in the footer</p>\n","patternBreadcrumb":{"patternType":"atoms","patternSubtype":"links"},"patternExtension":"mustache","patternName":"Footer Nav Link","patternPartial":"atoms-footer-nav-link","patternState":"","patternEngineName":"mustache","extraOutput":{}}
+    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":false,"patternLineagesR":[],"lineageR":[],"patternLineageEExists":false,"patternDesc":"<p>A text link in the footer</p>\n","patternBreadcrumb":{"patternType":"atoms","patternSubtype":"links"},"patternExtension":"mustache","patternName":"Footer Nav Link","patternPartial":"atoms-footer-nav-link","patternState":"","patternEngineName":"mustache","extraOutput":{}}
   </script>
 </div><!--end .sg-pattern-->
 <div id="atoms-primary-nav-link" class="sg-pattern">
@@ -142,10 +142,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1504541839604">
+<script id="pl-js-polyfill-insert-1504551150857">
   (function() {
     if (self != top) {
-      var cb = '1504541839604';
+      var cb = '1504551150857';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -155,10 +155,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1504541839604">
+<script id="pl-js-insert-1504551150857">
   (function() {
     if (self != top) {
-      var cb = '1504541839604';
+      var cb = '1504551150857';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
