--- a/public/patterns/01-molecules-footer-footer/01-molecules-footer-footer.markup-only.html
+++ b/public/patterns/01-molecules-footer-footer/01-molecules-footer-footer.markup-only.html
@@ -1,36 +1,10 @@
 <div class="footer">
   <div class="footer-inside">
-    <div class="footer-logo">
-      <div class="logo"><img src="../../images/logo.svg"></div>
-
-    </div>
-    <div class="footer-thirds">
-      <div class="footer-third first">
-        <div class="footer-link"><a href="#">Footer Link</a></div>
-
-        <div class="footer-link"><a href="#">Footer Link</a></div>
-
-      </div>
-      <div class="footer-third second">
-        <div class="small">Integer eget mollis</div>
-
-        <p>Integer eget mollis ipsum. Donec vehicula eleifend viverra. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam tincidunt odio et augue porta ultrices. Mauris pulvinar tellus pulvinar viverra dapibus. Cras ut tortor enim.</p>
-
-      </div>
-      <div class="footer-third third">
-        <div class="columns">
-          <div class="column-first">
-            <div class="footer-link"><a href="#">Donec vehicula</a></div>
-            <div class="footer-link"><a href="#">Cras ut</a></div>
-            <div class="footer-link"><a href="#">Mauris pulvinar</a></div>
-          </div>
-          <div class="column-second">
-            <div class="footer-link"><a href="#">Integer eget</a></div>
-            <div class="footer-link"><a href="#">Aliquam</a></div>
-            <div class="footer-link"><a href="#">Mlesuada</a></div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <ul>
+      <li><a href="#">Footer Link</a></li>
+      <li><a href="#">Footer Link</a></li>
+      <li><a href="#">Footer Link</a></li>
+      <li><a href="#">Footer Link</a></li>
+    </ul>
   </div>
 </div>
