--- a/public/styleguide/html/styleguide.html
+++ b/public/styleguide/html/styleguide.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
     
-    <link rel="stylesheet" href="../../css/style.css?1504541839604" media="all" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1504541839604" media="all" />
+    <link rel="stylesheet" href="../../css/style.css?1504551150857" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1504551150857" media="all" />
     
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -16,8 +16,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1504541839604" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1504541839604" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1504551150857" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1504551150857" media="all" />
 
     <!-- End Pattern Lab -->
   
@@ -155,7 +155,7 @@
 
   </div>
   <script type="text/json" id="sg-pattern-data-atoms-footer-nav-link" class="sg-pattern-data">
-    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"molecules-footer","lineagePath":"../../patterns/01-molecules-footer-footer/01-molecules-footer-footer.rendered.html"}],"lineageR":[{"lineagePattern":"molecules-footer","lineagePath":"../../patterns/01-molecules-footer-footer/01-molecules-footer-footer.rendered.html"}],"patternLineageEExists":true,"patternDesc":"<p>A text link in the footer</p>\n","patternBreadcrumb":{"patternType":"atoms","patternSubtype":"links"},"patternExtension":"mustache","patternName":"Footer Nav Link","patternPartial":"atoms-footer-nav-link","patternState":"","patternEngineName":"mustache","extraOutput":{}}
+    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":false,"patternLineagesR":[],"lineageR":[],"patternLineageEExists":false,"patternDesc":"<p>A text link in the footer</p>\n","patternBreadcrumb":{"patternType":"atoms","patternSubtype":"links"},"patternExtension":"mustache","patternName":"Footer Nav Link","patternPartial":"atoms-footer-nav-link","patternState":"","patternEngineName":"mustache","extraOutput":{}}
   </script>
 </div><!--end .sg-pattern-->
 <div id="atoms-primary-nav-link" class="sg-pattern">
@@ -205,7 +205,7 @@
 
   </div>
   <script type="text/json" id="sg-pattern-data-atoms-logo" class="sg-pattern-data">
-    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"molecules-footer","lineagePath":"../../patterns/01-molecules-footer-footer/01-molecules-footer-footer.rendered.html"},{"lineagePattern":"molecules-primary-nav","lineagePath":"../../patterns/01-molecules-primary-nav-primary-nav/01-molecules-primary-nav-primary-nav.rendered.html"}],"lineageR":[{"lineagePattern":"molecules-footer","lineagePath":"../../patterns/01-molecules-footer-footer/01-molecules-footer-footer.rendered.html"},{"lineagePattern":"molecules-primary-nav","lineagePath":"../../patterns/01-molecules-primary-nav-primary-nav/01-molecules-primary-nav-primary-nav.rendered.html"}],"patternLineageEExists":true,"patternDesc":"<p>Logo</p>\n","patternBreadcrumb":{"patternType":"atoms","patternSubtype":"logo"},"patternExtension":"mustache","patternName":"Logo","patternPartial":"atoms-logo","patternState":"","patternEngineName":"mustache","extraOutput":{}}
+    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"molecules-primary-nav","lineagePath":"../../patterns/01-molecules-primary-nav-primary-nav/01-molecules-primary-nav-primary-nav.rendered.html"}],"lineageR":[{"lineagePattern":"molecules-primary-nav","lineagePath":"../../patterns/01-molecules-primary-nav-primary-nav/01-molecules-primary-nav-primary-nav.rendered.html"}],"patternLineageEExists":true,"patternDesc":"<p>Logo</p>\n","patternBreadcrumb":{"patternType":"atoms","patternSubtype":"logo"},"patternExtension":"mustache","patternName":"Logo","patternPartial":"atoms-logo","patternState":"","patternEngineName":"mustache","extraOutput":{}}
   </script>
 </div><!--end .sg-pattern-->
 <div id="viewall-atoms-typography" class="sg-pattern-category">
@@ -322,7 +322,7 @@
 
   </div>
   <script type="text/json" id="sg-pattern-data-atoms-paragraph-footer" class="sg-pattern-data">
-    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"molecules-footer","lineagePath":"../../patterns/01-molecules-footer-footer/01-molecules-footer-footer.rendered.html"}],"lineageR":[{"lineagePattern":"molecules-footer","lineagePath":"../../patterns/01-molecules-footer-footer/01-molecules-footer-footer.rendered.html"}],"patternLineageEExists":true,"patternDesc":"<p>Description</p>\n","patternBreadcrumb":{"patternType":"atoms","patternSubtype":"typography"},"patternExtension":"mustache","patternName":"Paragraph Footer","patternPartial":"atoms-paragraph-footer","patternState":"","patternEngineName":"mustache","extraOutput":{}}
+    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":false,"patternLineagesR":[],"lineageR":[],"patternLineageEExists":false,"patternDesc":"<p>Description</p>\n","patternBreadcrumb":{"patternType":"atoms","patternSubtype":"typography"},"patternExtension":"mustache","patternName":"Paragraph Footer","patternPartial":"atoms-paragraph-footer","patternState":"","patternEngineName":"mustache","extraOutput":{}}
   </script>
 </div><!--end .sg-pattern-->
 <div id="atoms-small" class="sg-pattern">
@@ -343,7 +343,7 @@
 
   </div>
   <script type="text/json" id="sg-pattern-data-atoms-small" class="sg-pattern-data">
-    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"molecules-footer","lineagePath":"../../patterns/01-molecules-footer-footer/01-molecules-footer-footer.rendered.html"},{"lineagePattern":"molecules-list-block","lineagePath":"../../patterns/01-molecules-list-block-list-block/01-molecules-list-block-list-block.rendered.html"}],"lineageR":[{"lineagePattern":"molecules-footer","lineagePath":"../../patterns/01-molecules-footer-footer/01-molecules-footer-footer.rendered.html"},{"lineagePattern":"molecules-list-block","lineagePath":"../../patterns/01-molecules-list-block-list-block/01-molecules-list-block-list-block.rendered.html"}],"patternLineageEExists":true,"patternDesc":"<p>Description</p>\n","patternBreadcrumb":{"patternType":"atoms","patternSubtype":"typography"},"patternExtension":"mustache","patternName":"Small","patternPartial":"atoms-small","patternState":"","patternEngineName":"mustache","extraOutput":{}}
+    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"molecules-list-block","lineagePath":"../../patterns/01-molecules-list-block-list-block/01-molecules-list-block-list-block.rendered.html"}],"lineageR":[{"lineagePattern":"molecules-list-block","lineagePath":"../../patterns/01-molecules-list-block-list-block/01-molecules-list-block-list-block.rendered.html"}],"patternLineageEExists":true,"patternDesc":"<p>Description</p>\n","patternBreadcrumb":{"patternType":"atoms","patternSubtype":"typography"},"patternExtension":"mustache","patternName":"Small","patternPartial":"atoms-small","patternState":"","patternEngineName":"mustache","extraOutput":{}}
   </script>
 </div><!--end .sg-pattern-->
 <div id="viewall-molecules-copy-block" class="sg-pattern-category">
@@ -404,44 +404,18 @@
   <div class="sg-pattern-example">
     <div class="footer">
   <div class="footer-inside">
-    <div class="footer-logo">
-    <div class="logo"><img src="../../images/logo.svg"></div>
-
-    </div>
-    <div class="footer-thirds">
-      <div class="footer-third first">
-        <div class="footer-link"><a href="#">Footer Link</a></div>
-
-        <div class="footer-link"><a href="#">Footer Link</a></div>
-
-      </div>
-      <div class="footer-third second">
-        <div class="small">Integer eget mollis</div>
-
-        <p>Integer eget mollis ipsum. Donec vehicula eleifend viverra. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam tincidunt odio et augue porta ultrices. Mauris pulvinar tellus pulvinar viverra dapibus. Cras ut tortor enim.</p>
-
-      </div>
-      <div class="footer-third third">
-        <div class="columns">
-          <div class="column-first">
-            <div class="footer-link"><a href="#">Donec vehicula</a></div>
-            <div class="footer-link"><a href="#">Cras ut</a></div>
-            <div class="footer-link"><a href="#">Mauris pulvinar</a></div>
-          </div>
-          <div class="column-second">
-            <div class="footer-link"><a href="#">Integer eget</a></div>
-            <div class="footer-link"><a href="#">Aliquam</a></div>
-            <div class="footer-link"><a href="#">Mlesuada</a></div>
-          </div>
-        </div>
-      </div>
-    </div>
+      <ul>
+        <li><a href="#">Footer Link</a></li>
+        <li><a href="#">Footer Link</a></li>
+        <li><a href="#">Footer Link</a></li>
+        <li><a href="#">Footer Link</a></li>
+      </ul>
   </div>
 </div>
 
   </div>
   <script type="text/json" id="sg-pattern-data-molecules-footer" class="sg-pattern-data">
-    {"cssEnabled":false,"patternLineageExists":true,"patternLineages":[{"lineagePattern":"atoms-logo","lineagePath":"../../patterns/00-atoms-logo-logo/00-atoms-logo-logo.rendered.html"},{"lineagePattern":"atoms-footer-nav-link","lineagePath":"../../patterns/00-atoms-links-footer-nav-link/00-atoms-links-footer-nav-link.rendered.html"},{"lineagePattern":"atoms-small","lineagePath":"../../patterns/00-atoms-typography-small/00-atoms-typography-small.rendered.html"},{"lineagePattern":"atoms-paragraph-footer","lineagePath":"../../patterns/00-atoms-typography-paragraph-footer/00-atoms-typography-paragraph-footer.rendered.html"}],"lineage":[{"lineagePattern":"atoms-logo","lineagePath":"../../patterns/00-atoms-logo-logo/00-atoms-logo-logo.rendered.html"},{"lineagePattern":"atoms-footer-nav-link","lineagePath":"../../patterns/00-atoms-links-footer-nav-link/00-atoms-links-footer-nav-link.rendered.html"},{"lineagePattern":"atoms-small","lineagePath":"../../patterns/00-atoms-typography-small/00-atoms-typography-small.rendered.html"},{"lineagePattern":"atoms-paragraph-footer","lineagePath":"../../patterns/00-atoms-typography-paragraph-footer/00-atoms-typography-paragraph-footer.rendered.html"}],"patternLineageRExists":false,"patternLineagesR":[],"lineageR":[],"patternLineageEExists":true,"patternDesc":"<p>Description</p>\n","patternBreadcrumb":{"patternType":"molecules","patternSubtype":"footer"},"patternExtension":"mustache","patternName":"Footer","patternPartial":"molecules-footer","patternState":"","patternEngineName":"mustache","extraOutput":{}}
+    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":false,"patternLineagesR":[],"lineageR":[],"patternLineageEExists":false,"patternDesc":"<p>Description</p>\n","patternBreadcrumb":{"patternType":"molecules","patternSubtype":"footer"},"patternExtension":"mustache","patternName":"Footer","patternPartial":"molecules-footer","patternState":"","patternEngineName":"mustache","extraOutput":{}}
   </script>
 </div><!--end .sg-pattern-->
 <div id="viewall-molecules-list-block" class="sg-pattern-category">
@@ -566,10 +540,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1504541839604">
+<script id="pl-js-polyfill-insert-1504551150857">
   (function() {
     if (self != top) {
-      var cb = '1504541839604';
+      var cb = '1504551150857';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -579,10 +553,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1504541839604">
+<script id="pl-js-insert-1504551150857">
   (function() {
     if (self != top) {
-      var cb = '1504541839604';
+      var cb = '1504551150857';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
