--- a/public/patterns/01-molecules-primary-nav-primary-nav/01-molecules-primary-nav-primary-nav.markup-only.html
+++ b/public/patterns/01-molecules-primary-nav-primary-nav/01-molecules-primary-nav-primary-nav.markup-only.html
@@ -1,12 +1,17 @@
 <div class="primary-nav">
   <div class="primary-nav-half first">
-    <div class="logo"><img src="../../images/logo.svg"></div>
+    <div class="logo">
+      <a href="/">
+        <div class="logo-icon"><img src="../../images/logo.svg"></div>
+      </a>
+      <a href="/"><span class="name">Name</span> <span class="title"> &mdash; Title</span></a>
+    </div>
 
   </div>
   <div class="primary-nav-half second">
-    <a href="#" class="link-header">Link Header</a>
+    <a href="#" class="link-header">Link</a>
 
-    <a href="#" class="link-header">Link Header</a>
+    <a href="#" class="link-header">Link</a>
 
   </div>
 </div>
