--- a/public/patterns/01-molecules/index.html
+++ b/public/patterns/01-molecules/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
     
-    <link rel="stylesheet" href="../../css/style.css?1505002651889" media="all" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1505002651889" media="all" />
+    <link rel="stylesheet" href="../../css/style.css?1505168798960" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1505168798960" media="all" />
     
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -16,8 +16,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1505002651889" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1505002651889" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1505168798960" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1505168798960" media="all" />
 
     <!-- End Pattern Lab -->
   
@@ -86,16 +86,34 @@
   </div>
   <div class="sg-pattern-example">
     <div class="footer">
-      <ul>
-        <li><a href="#" class="link-footer">Link Footer</a>
-</li>
-        <li><a href="#" class="link-footer">Link Footer</a>
-</li>
-        <li><a href="#" class="link-footer">Link Footer</a>
-</li>
-        <li><a href="#" class="link-footer">Link Footer</a>
-</li>
-      </ul>
+  <div class="footer-left">
+      <dl>
+        <dt>Connect</dt>
+        <dd><a href="#" class="link-footer">LinkFooterText</a>
+</dd>
+        <dd><a href="#" class="link-footer">LinkFooterText</a>
+</dd>
+        <dd><a href="#" class="link-footer">LinkFooterText</a>
+</dd>
+        <dd><a href="#" class="link-footer">LinkFooterText</a>
+</dd>
+        <dd><a href="#" class="link-footer">LinkFooterText</a>
+</dd>
+        <dd><a href="#" class="link-footer">LinkFooterText</a>
+</dd>
+        <dd><a href="#" class="link-footer">LinkFooterText</a>
+</dd>
+        <dd><a href="#" class="link-footer">LinkFooterText</a>
+</dd>
+      </dl>
+  </div>
+  <div class="footer-right">
+    <dl>
+      <dt>Email</dt>
+      <dd><a href="#" class="link-footer">LinkFooterText</a>
+</dd>
+    </dl>
+  </div>
 </div>
 
   </div>
@@ -165,13 +183,16 @@
   <div class="sg-pattern-example">
     <div class="primary-nav">
     <div class="primary-nav-half first">
-      <div class="logo"><img src="../../images/logo.svg"></div>
+        <div class="logo">
+  <a href="/"><div class="logo-icon"><img src="../../images/logo.svg"></div></a>
+  <a href="/"><span class="name">Name</span> <span class="title"> &mdash; Title</span></a>
+</div>
 
     </div>
     <div class="primary-nav-half second">
-      <a href="#" class="link-header">Link Header</a>
+      <a href="#" class="link-header">Link</a>
 
-      <a href="#" class="link-header">Link Header</a>
+      <a href="#" class="link-header">Link</a>
 
     </div>
 </div>
@@ -223,10 +244,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1505002651889">
+<script id="pl-js-polyfill-insert-1505168798960">
   (function() {
     if (self != top) {
-      var cb = '1505002651889';
+      var cb = '1505168798960';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -236,10 +257,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1505002651889">
+<script id="pl-js-insert-1505168798960">
   (function() {
     if (self != top) {
-      var cb = '1505002651889';
+      var cb = '1505168798960';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
