--- a/public/patterns/00-atoms-logo-logo/00-atoms-logo-logo.markup-only.html
+++ b/public/patterns/00-atoms-logo-logo/00-atoms-logo-logo.markup-only.html
@@ -1,1 +1,6 @@
-<div class="logo"><img src="../../images/logo.svg"></div>
+<div class="logo">
+  <a href="/">
+    <div class="logo-icon"><img src="../../images/logo.svg"></div>
+  </a>
+  <a href="/"><span class="name">Name</span> <span class="title"> &mdash; Title</span></a>
+</div>
