--- a/public/patterns/01-molecules-footer-footer/01-molecules-footer-footer.markup-only.html
+++ b/public/patterns/01-molecules-footer-footer/01-molecules-footer-footer.markup-only.html
@@ -1,12 +1,30 @@
 <div class="footer">
-  <ul>
-    <li><a href="#" class="link-footer">Link Footer</a>
-    </li>
-    <li><a href="#" class="link-footer">Link Footer</a>
-    </li>
-    <li><a href="#" class="link-footer">Link Footer</a>
-    </li>
-    <li><a href="#" class="link-footer">Link Footer</a>
-    </li>
-  </ul>
+  <div class="footer-left">
+    <dl>
+      <dt>Connect</dt>
+      <dd><a href="#" class="link-footer">LinkFooterText</a>
+      </dd>
+      <dd><a href="#" class="link-footer">LinkFooterText</a>
+      </dd>
+      <dd><a href="#" class="link-footer">LinkFooterText</a>
+      </dd>
+      <dd><a href="#" class="link-footer">LinkFooterText</a>
+      </dd>
+      <dd><a href="#" class="link-footer">LinkFooterText</a>
+      </dd>
+      <dd><a href="#" class="link-footer">LinkFooterText</a>
+      </dd>
+      <dd><a href="#" class="link-footer">LinkFooterText</a>
+      </dd>
+      <dd><a href="#" class="link-footer">LinkFooterText</a>
+      </dd>
+    </dl>
+  </div>
+  <div class="footer-right">
+    <dl>
+      <dt>Email</dt>
+      <dd><a href="#" class="link-footer">LinkFooterText</a>
+      </dd>
+    </dl>
+  </div>
 </div>
